<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UU游戏世界</string>
    <string name="welcome_init">正在初始化</string>
    <string name="welcome_error">请求失败</string>
    <string name="welcome_no_network">联网不成功，请检查网络</string>
    <string name="welcome_retry">重试</string>
    <string name="welcome_quit">退出</string>
    <string name="welcome_cancel">取消</string>
    <string name="welcome_later">以后再说</string>
    <string name="welcome_version">发现新版本%s</string>
    <string name="welcome_comfirm_upgrade">是否升级</string>
    <string name="welcome_upgrade">升级</string>
    <string name="welcome_force">此版本已无法使用，必须升级</string>
    <string name="welcome_click_download">点击下载</string>
    <string name="request_sp_host">http://192.168.26.118:8080/gamemarket/</string>
    <string name="request_sp_upgrade">upgrade</string>
    <string name="request_sp_entry">entry</string>
    <string name="request_uu_host">http://58.63.224.75:8010/gc/</string>
    <string name="request_uu_column">gettop.aspx?imei=</string>
    <string name="request_uu_tag">lable.aspx?imei=</string>
    <string name="request_uu_detail">getgame.aspx?imei=</string>
    <string name="request_uu_search">searchgame.aspx?imei=</string>
    <string name="request_uu_ad">gettopad.aspx?imei=</string>
    <string name="request_uu_subcolumn">getsublanmu.aspx?imei=</string>
    <string name="request_uu_app_column">getlanmugame.aspx?imei=</string>    
    <string name="request_uu_app_tag">getlablegame.aspx?imei=</string>
    <string name="request_uu_app_download">getgamebydown.aspx?imei=</string>
    <string name="request_uu_app_score">getgamebyscore.aspx?imei=</string>
    <string name="request_uu_app_status">updatedown.aspx?imei=</string>    
    <string name="request_host">http://api.gfan.com/market/api/</string>
    <string name="request_searchword">http://search.gfan.com/search/search/marketHotWords?q=</string>
    <string name="request_ad">homeMasterRecommend</string>
    <string name="request_column">getAllCategory</string>
    <string name="request_search">search</string>
    <string name="request_tag">allGroupTags</string>
    <string name="request_app_recommend">getHomeRecommend</string>
    <string name="request_app_hot">getRecommendProducts</string>
    <string name="request_app_new">tagApps</string>
    <string name="request_app_tag">tagApps</string>
    <string name="request_detail">getProductDetail</string>
    <string name="request_comment">getComments</string>
    <string name="request_download">getDownloadUrl</string>
    <string name="ad_text">●</string>
    <string name="column_select">﹀</string>    
    <string name="app_split">|</string>
    <string name="column_myapp">我的应用</string>
    <string name="tag_more">更多</string>
    <string name="app_continue">续传</string>
    <string name="app_download">下载</string>
    <string name="app_install">安装</string>
    <string name="app_installed">已安装</string>
    <string name="app_downloaded">已下载</string>
    <string name="app_run">运行</string>
    <string name="app_waiting">等待下载</string>
    <string name="app_free">免费</string>
    <string name="app_fee">收费</string>
    <string name="app_downloading">下载中</string>
    <string name="app_comment">评论</string>
    <string name="app_collect">收藏</string>
    <string name="app_share">分享</string>
    <string name="app_browse">最近浏览</string>
    <string name="app_click_run">点击运行游戏</string>
    <string name="dialog_app_filesize">文件大小: </string>
    <string name="dialog_app_download">是否下载</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_app_run">确认运行吗？</string>
    <string name="dialog_app_download_cancel">确认取消下载吗？</string>
    <string name="dialog_myapp_download_del">是否删除安装包</string>
    <string name="dialog_myapp_download_install">是否安装</string>
    <string name="dialog_myapp_download_reinstall">是否重新安装</string>
    <string name="dialog_myapp_collect_del">是否删除此收藏</string>
    <string name="popwindow_myapp_run_title">打开游戏</string>
    <string name="popwindow_myapp_run_msg">你确定运行游戏: </string>
    <string name="popwindow_myapp_run_ma">吗？</string>
    <string name="popwindow_quit_title">退出</string>
    <string name="popwindow_quit_msg">是否退出?</string>
    <string name="comment_submit">提交</string>
    <string name="comment_reply">回复</string>
    <string name="game_image">游戏图片</string>
    <string name="detail_intro">游戏介绍</string>
    <string name="detail_app_collect">是否收藏？</string>
    <string name="error_no_apkfile">安装失败，没有此apk安装文件</string>
    <string name="tip_collect_success">收藏成功</string>
    <string name="tip_myapp_download_del_success">删除安装包成功</string>
    <string name="tip_myapp_download_del_error">删除安装包失败</string>
    <string name="tip_myapp_collect_del_success">删除此收藏成功</string>
    <string name="myapp_size">大小: </string>
    <string name="myapp_version">版本: </string>
    <string name="myapp_del">删除</string>
    <string name="myapp_install">安装</string>
    <string name="myapp_reinstall">重新安装</string>

</resources>