<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/popwindow_quit_layer"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/popwindow_quit_background"
        android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/popwindow_quit_top" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/popwindow_quit_title"
            android:textColor="@color/popwindow_quit_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="22dp"
        android:text="@string/popwindow_quit_msg"
        android:textColor="@color/popwindow_quit_msg" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/popwindow_quit_bottom"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <FrameLayout
            android:id="@+id/popwindow_quit_confirm"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/popwindow_quit_botton1"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_confirm"
                android:textColor="@color/popwindow_quit_botton"
                android:textSize="13sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/popwindow_quit_cancel"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/popwindow_quit_botton2"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/popwindow_quit_botton"
                android:textSize="13sp" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>
</LinearLayout>
