<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/myapp_run_corner"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:background="@color/myapp_run_top1"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:background="@color/myapp_run_top2"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/popwindow_myapp_run_title"
            android:textColor="@color/popwindow_myapp_run_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/popwindow_myapp_run_msg"
        android:textColor="@color/popwindow_myapp_run_msg" />

    <TextView
        android:id="@+id/popwindow_myapp_run_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/popwindow_myapp_run_msg" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <FrameLayout
            android:id="@+id/popwindow_myapp_run_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/detail_app_button"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_confirm"
                android:textColor="@color/popwindow_myapp_run_button" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/popwindow_myapp_run_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/detail_app_button"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/popwindow_myapp_run_button" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>