<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/myapp_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/home" />

        <LinearLayout
            android:id="@+id/myapp_column"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/column_background"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/myapp_installed"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_installed"
                    android:textColor="@color/column_button" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myapp_download"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_download"
                    android:textColor="@color/column_button" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myapp_collect"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_collect"
                    android:textColor="@color/column_button" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myapp_browse"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_browse"
                    android:textColor="@color/column_button" />
            </FrameLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/myapp_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/search_big" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myapp_banner"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@color/myapp_banner"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/myapp_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/return_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/app_click_run"
            android:textColor="@color/column_button"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/myapp_refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/refresh" />
    </LinearLayout>

    <ListView
        android:id="@+id/myapp_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent" >
    </ListView>

</LinearLayout>