<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_app_top_background"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/detail_app_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detail_app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textColor="@color/detail_app_title"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RatingBar
                    android:id="@+id/detail_app_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/detail_app_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/double_app_score"
                    android:textSize="13sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/detail_app_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/double_app_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/detail_app_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/double_app_text"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/download_times" />

                    <TextView
                        android:id="@+id/detail_app_dcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/double_app_text"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/comment_times" />

                    <TextView
                        android:id="@+id/detail_app_pcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/double_app_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_app_action"
                    android:layout_width="45dp"
                    android:layout_height="19dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_corner"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/detail_app_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/button_app"
                        android:textSize="10sp" >
                    </TextView>
                </LinearLayout>

                <ImageView
                    android:id="@+id/detail_app_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/single_app_download2"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:background="@color/detail_app_top_background" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/detail_app_line"
            android:orientation="vertical" >
        </LinearLayout>

        <FrameLayout
            android:id="@+id/detail_app_intro"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/detail_app_intro_select"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/detail_intro"
                android:textColor="@color/detail_app_tags_text"
                android:textSize="13sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detail_app_comment"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/detail_app_intro"
            android:background="@drawable/detail_app_comment"
            android:clickable="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_comment"
                android:textColor="@color/detail_app_tags_text"
                android:textSize="13sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/detail_app_comment"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/detail_app_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:drawableLeft="@drawable/app_collect"
                android:drawablePadding="2dp"
                android:text="@string/app_collect"
                android:textColor="@color/detail_app_tags_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/detail_app_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/app_share"
                android:drawablePadding="2dp"
                android:text="@string/app_share"
                android:textColor="@color/detail_app_tags_text"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/detail_app_intro_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_app_bottom_background"
        android:fadingEdgeLength="0dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detail_app_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/detail_app_desc"
                android:textSize="13sp" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" >

                <Gallery
                    android:id="@+id/detail_app_images"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/detail_app_gallery_background"
                    android:paddingLeft="15dp"
                    android:spacing="8dp" />
            </FrameLayout>

            <RatingBar
                android:id="@+id/detail_app_comment_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/detail_app_comment_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/detail_app_comment_edittext"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="none"
                    android:maxLength="30"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <FrameLayout
                    android:id="@+id/detail_app_comment_button"
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:layout_toRightOf="@id/detail_app_comment_edittext"
                    android:background="@color/detail_app_comment_button" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/comment_submit"
                        android:textColor="@color/detail_app_comment_button_text" />
                </FrameLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/detail_app_comment_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="#00000000"
        android:visibility="gone" >
    </ListView>

</LinearLayout>